--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.7",
-    "express": "^4.14.0",
-    "mongoose": "^4.5.3",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
+    "crypto-js": "^3.1.6",
+    "express": "^4.14.0",
+    "jsonwebtoken": "^7.0.1",
+    "mongoose": "^4.5.3",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
